Compatibility with JitPack