@@ -7,6 +7,7 @@ import com.tibudget.dto.RecurringPaymentDto;
 import com.tibudget.dto.TransactionDto;
 
 import java.net.URI;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -87,7 +88,7 @@ public interface CollectorPlugin {
      * @return a collection of {@link MessageDto} containing validation results.
      */
     default List<MessageDto> validate() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     /**
